# graphite2-sys-rust

./: .appveyor.yml  .travis.yml  Cargo.toml  build.rs  gen-bindings-and-diff.sh
.appveyor/: install-rust.ps1  setup-gnu.ps1  setup-msvc.ps1
ci/: install-vcpkg.sh
graphite2/: CMakeLists.txt
graphite2-sys/: Cargo.toml  build.rs
graphite2-sys-bindgen/: Cargo.toml
graphite2-sys-bindgen/src/: main.rs
graphite2-sys-ctest/: Cargo.toml  build.rs
graphite2-sys-ctest/src/: main.rs
graphite2-sys/graphite2/src/: CMakeLists.txt
graphite2-sys/src/: bindings.rs  lib.rs
graphite2/src/: CMakeLists.txt
