[package]
name = "graphite2-nobindings"
version = "1.3.13"
authors = ["Sean Leather <sean.leather@gmail.com>"]
edition = "2018"
links = "graphite2"

[build-dependencies]
cc = "1.0"
cmake = { version = "0.1", optional = true }
pkg-config = { version = "0.3", optional = true }
vcpkg = { version = "0.2", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]

[features]
default = ["pkg-config", "vcpkg", "static"]
static = ["cmake"]
